# models/user.ts
@@ -1,7 +1,21 @@
-export default interface User {
-    id?: number,
-    email: string,
-    password: string,
-    lastName: string,
-    firstName: string
+import {Entity, PrimaryGeneratedColumn, Column, BaseEntity} from "typeorm";
+
+@Entity()
+export class User extends BaseEntity{
+
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ type: 'varchar', nullable: false, length: 255, unique: true })
+    email: string;
+
+    @Column({ type: 'varchar', nullable: false, length: 255 })
+    password: string;
+
+    @Column({ type: 'varchar', nullable: false, length: 255 })
+    firstName: string;
+
+    @Column({ type: 'varchar', nullable: false, length: 255 })
+    lastName: string;
+
 }
